--- a/index.html
+++ b/index.html
@@ -155,6 +155,420 @@ sqldf(query)</code></pre>
 ## 23 shockur01    NYA   1927  0
 ## 24 thomamy01    NYA   1927  0
 ## 25  weraju01    NYA   1927  1</code></pre>
+<p>Find all instances where the Yankees have 40 homeruns or more.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT teamID, playerID, yearID, HR FROM Batting
+WHERE teamID='NYA' and HR&gt;=40&quot;
+sqldf(query)</code></pre>
+<pre><code>##    teamID  playerID yearID HR
+## 1     NYA  ruthba01   1920 54
+## 2     NYA  ruthba01   1921 59
+## 3     NYA  ruthba01   1923 41
+## 4     NYA  ruthba01   1924 46
+## 5     NYA  ruthba01   1926 47
+## 6     NYA gehrilo01   1927 47
+## 7     NYA  ruthba01   1927 60
+## 8     NYA  ruthba01   1928 54
+## 9     NYA  ruthba01   1929 46
+## 10    NYA gehrilo01   1930 41
+## 11    NYA  ruthba01   1930 49
+## 12    NYA gehrilo01   1931 46
+## 13    NYA  ruthba01   1931 46
+## 14    NYA  ruthba01   1932 41
+## 15    NYA gehrilo01   1934 49
+## 16    NYA gehrilo01   1936 49
+## 17    NYA dimagjo01   1937 46
+## 18    NYA mantlmi01   1956 52
+## 19    NYA mantlmi01   1958 42
+## 20    NYA mantlmi01   1960 40
+## 21    NYA mantlmi01   1961 54
+## 22    NYA marisro01   1961 61
+## 23    NYA jacksre01   1980 41
+## 24    NYA martiti02   1997 44
+## 25    NYA giambja01   2002 41
+## 26    NYA giambja01   2003 41
+## 27    NYA rodrial01   2005 48
+## 28    NYA rodrial01   2007 54
+## 29    NYA grandcu01   2011 41
+## 30    NYA grandcu01   2012 43</code></pre>
+<p>Find all instances where a player had more than 40 homeruns and less than 60 strikeouts.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT teamID, playerID, yearID, HR, SO FROM Batting
+WHERE HR&gt;40 and SO&lt;60&quot;
+sqldf(query)</code></pre>
+<pre><code>##    teamID  playerID yearID HR SO
+## 1     SLN hornsro01   1922 42 50
+## 2     PHI willicy01   1923 41 57
+## 3     NY1   ottme01   1929 42 38
+## 4     NYA gehrilo01   1931 46 56
+## 5     NYA  ruthba01   1931 46 51
+## 6     NYA gehrilo01   1934 49 31
+## 7     NYA gehrilo01   1936 49 46
+## 8     CLE troskha01   1936 42 58
+## 9     NYA dimagjo01   1937 46 37
+## 10    SLN  mizejo01   1940 43 49
+## 11    NY1  mizejo01   1947 51 42
+## 12    BOS willite01   1949 43 48
+## 13    PIT kinerra01   1951 42 57
+## 14    BRO camparo01   1953 41 58
+## 15    CLE rosenal01   1953 43 48
+## 16    CIN kluszte01   1954 49 35
+## 17    NY1  mayswi01   1954 41 57
+## 18    CIN kluszte01   1955 47 40
+## 19    ML1 aaronha01   1957 44 58
+## 20    WS1 sievero01   1957 42 55
+## 21    ATL aaronha01   1969 44 47
+## 22    ATL aaronha01   1971 47 58
+## 23    CHA thomafr04   1993 41 54
+## 24    SFN bondsba01   2002 46 47
+## 25    SFN bondsba01   2003 45 58
+## 26    SFN bondsba01   2004 45 41
+## 27    SLN pujolal01   2004 46 52
+## 28    SLN pujolal01   2006 49 50</code></pre>
+<p>Find all instances where the Phillies in the 1970s hitting more than 30 homeruns.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT teamID, playerID, yearID, HR FROM Batting 
+WHERE teamID='PHI' and HR&gt;30 and yearID&gt;=1970 and yearID&lt;=1979&quot;
+sqldf(query)</code></pre>
+<pre><code>##   teamID  playerID yearID HR
+## 1    PHI johnsde01   1971 34
+## 2    PHI schmimi01   1974 36
+## 3    PHI luzingr01   1975 34
+## 4    PHI schmimi01   1975 38
+## 5    PHI schmimi01   1976 38
+## 6    PHI luzingr01   1977 39
+## 7    PHI schmimi01   1977 38
+## 8    PHI luzingr01   1978 35
+## 9    PHI schmimi01   1979 45</code></pre>
+</div>
+<div id="order-by" class="section level2">
+<h2>Order By</h2>
+<p>With SQL, you can also order the rows in the output. For example, suppose you wanted to see every instance of a player hitting more than 50 homeruns. But you would like the players witht hte most homeruns to be at the top of this list. We could do this in the following way:</p>
+<pre class="r"><code>query&lt;-&quot;SELECT playerID,yearID,teamID,HR from Batting 
+WHERE HR&gt;50 
+Order by HR Desc&quot;
+sqldf(query)</code></pre>
+<pre><code>##     playerID yearID teamID HR
+## 1  bondsba01   2001    SFN 73
+## 2  mcgwima01   1998    SLN 70
+## 3   sosasa01   1998    CHN 66
+## 4  mcgwima01   1999    SLN 65
+## 5   sosasa01   2001    CHN 64
+## 6   sosasa01   1999    CHN 63
+## 7  marisro01   1961    NYA 61
+## 8   ruthba01   1927    NYA 60
+## 9   ruthba01   1921    NYA 59
+## 10  foxxji01   1932    PHA 58
+## 11 greenha01   1938    DET 58
+## 12 howarry01   2006    PHI 58
+## 13 gonzalu01   2001    ARI 57
+## 14 rodrial01   2002    TEX 57
+## 15 wilsoha01   1930    CHN 56
+## 16 griffke02   1997    SEA 56
+## 17 griffke02   1998    SEA 56
+## 18  ruthba01   1920    NYA 54
+## 19  ruthba01   1928    NYA 54
+## 20 kinerra01   1949    PIT 54
+## 21 mantlmi01   1961    NYA 54
+## 22 ortizda01   2006    BOS 54
+## 23 rodrial01   2007    NYA 54
+## 24 bautijo02   2010    TOR 54
+## 25 davisch02   2013    BAL 53
+## 26 mantlmi01   1956    NYA 52
+## 27  mayswi01   1965    SFN 52
+## 28 fostege01   1977    CIN 52
+## 29 mcgwima01   1996    OAK 52
+## 30 rodrial01   2001    TEX 52
+## 31 thomeji01   2002    CLE 52
+## 32 kinerra01   1947    PIT 51
+## 33  mizejo01   1947    NY1 51
+## 34  mayswi01   1955    NY1 51
+## 35 fieldce01   1990    DET 51
+## 36 jonesan01   2005    ATL 51</code></pre>
+<p>Find all instances of players striking out less than 10 times. Make sure each player has at least 400 at bats.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT playerID, teamID, yearID, SO, AB FROM Batting
+WHERE SO&lt;10 and AB&gt;=400
+ORDER BY SO&quot;
+sqldf(query)</code></pre>
+<pre><code>##     playerID teamID yearID SO  AB
+## 1  doyleja01    NY1   1894  3 422
+## 2  seweljo01    NYA   1932  3 503
+## 3  seweljo01    CLE   1925  4 608
+## 4  seweljo01    CLE   1929  4 578
+## 5  seweljo01    NYA   1933  4 524
+## 6   wardjo01    NY1   1893  5 588
+## 7  holloch01    CHN   1922  5 592
+## 8  mcinnst01    CLE   1922  5 537
+## 9  wanerll01    PIT   1936  5 414
+## 10 wrighge01    BS1   1875  6 408
+## 11 broutda01    BSN   1889  6 485
+## 12 keelewi01    BLN   1894  6 590
+## 13  wardjo01    NY1   1894  6 540
+## 14 quinnjo02    SLN   1895  6 543
+## 15 mcinnst01    BSN   1924  6 581
+## 16 seweljo01    CLE   1926  6 578
+## 17  wardjo01    NY1   1889  7 479
+## 18 crossla01    PHI   1893  7 415
+## 19 quinnjo02    SLN   1893  7 547
+## 20 crossla01    PHI   1894  7 529
+## 21 vaughfa01    CIN   1896  7 433
+## 22 cochrmi01    PHA   1927  7 432
+## 23 seweljo01    CLE   1927  7 569
+## 24 traynpi01    PIT   1929  7 540
+## 25 muelldo01    NY1   1956  7 453
+## 26 connoro01    NY1   1885  8 455
+## 27 glassja01    IN3   1887  8 483
+## 28 glassja01    NY1   1890  8 512
+## 29 donovpa01    PIT   1893  8 499
+## 30 dungasa01    CHN   1893  8 465
+## 31 pinknge01    LS3   1893  8 446
+## 32 brodist01    BLN   1894  8 573
+## 33 quinnjo02    SLN   1894  8 405
+## 34 bierblo01    PIT   1895  8 466
+## 35 crossla01    PHI   1895  8 535
+## 36   hoydu01    CIN   1895  8 429
+## 37 roushed01    CIN   1921  8 418
+## 38 collied01    CHA   1923  8 505
+## 39 collied01    CHA   1925  8 425
+## 40 speaktr01    WS1   1927  8 523
+## 41 cochrmi01    PHA   1929  8 514
+## 42 seweljo01    NYA   1931  8 484
+## 43 wanerll01    PIT   1933  8 500
+## 44 verbaem01    PHI   1947  8 540
+## 45 ansonca01    CHN   1883  9 413
+## 46 broutda01    DTN   1887  9 500
+## 47   hoydu01    WAS   1893  9 564
+## 48 bierblo01    PIT   1894  9 525
+## 49 broutda01    BLN   1894  9 525
+## 50 milledo01    SLN   1894  9 481
+## 51 keelewi01    BLN   1896  9 544
+## 52 mckeaed01    CL4   1896  9 571
+## 53 speaktr01    CLE   1918  9 471
+## 54  dealch01    CHN   1921  9 422
+## 55 mcinnst01    BOS   1921  9 584
+## 56 severha01    SLA   1921  9 472
+## 57  highan01    BSN   1926  9 476
+## 58 summaho01    CLE   1926  9 581
+## 59 seweljo01    CLE   1928  9 588
+## 60  ricesa01    WS1   1929  9 616
+## 61 leachfr01    NY1   1931  9 515
+## 62 busched01    PHA   1945  9 416
+## 63 holmeto01    BSN   1945  9 636
+## 64 boudrlo01    CLE   1948  9 560
+## 65 mitchda01    CLE   1952  9 511</code></pre>
+</div>
+<div id="aggregation" class="section level2">
+<h2>Aggregation</h2>
+<p>Aggregation allows you to group the information. It is done with the GROUP BY command. If you wanted to add a WHERE clause for within the group you must use the command HAVING after the GROUP BY command. Some important commands that also fall under this category include sum( ), avg( ), max( ), and min( ). Bellow are some examples:</p>
+<p>What is the total homeruns of Babe ruth?</p>
+<pre class="r"><code>query&lt;-&quot;SELECT playerID, sum(HR) FROM Batting 
+WHERE playerID='ruthba01'
+GROUP BY playerID&quot;
+sqldf(query)</code></pre>
+<pre><code>##   playerID sum(HR)
+## 1 ruthba01     714</code></pre>
+<p>Find the career homerun totals for all players, but list only those with a total of 600 or more. Order from greatest to least.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT playerID, sum(HR) FROM Batting
+GROUP BY playerID
+HAVING sum(HR)&gt;=600
+ORDER BY sum(HR) DESC&quot;
+sqldf(query)</code></pre>
+<pre><code>##    playerID sum(HR)
+## 1 bondsba01     762
+## 2 aaronha01     755
+## 3  ruthba01     714
+## 4 rodrial01     696
+## 5  mayswi01     660
+## 6 griffke02     630
+## 7 thomeji01     612
+## 8  sosasa01     609</code></pre>
+<p>What players have the highest average per season homerun totals? List only averages over 30.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT playerID, avg(HR) FROM Batting
+GROUP BY playerID
+HAVING avg(HR)&gt;30
+ORDER BY avg(HR) DESC&quot;
+sqldf(query)</code></pre>
+<pre><code>##     playerID  avg(HR)
+## 1  pujolal01 36.93750
+## 2  bondsba01 34.63636
+## 3  mcgwima01 34.29412
+## 4  kinerra01 33.54545
+## 5  aaronha01 32.82609
+## 6  bryankr01 32.50000
+## 7   ruthba01 32.45455
+## 8   sosasa01 32.05263
+## 9  cabremi01 31.85714
+## 10 belleal01 31.75000
+## 11 rodrial01 31.63636
+## 12 schmimi01 30.44444
+## 13 abreujo02 30.33333</code></pre>
+</div>
+<div id="joins" class="section level2">
+<h2>Joins</h2>
+<p>The commands used for this action include INNER JOIN and ON. INNER JOIN allows you to connect two seperate tables. ON tells the program how to connect them.</p>
+<p>Find the first and last name, along with team, year, and homeruns. The only player should be Babe Ruth.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT nameFirst, nameLast, teamID, yearID, HR
+FROM Batting INNER JOIN Master
+ON Batting.playerID=Master.playerID
+WHERE Batting.playerID='ruthba01'&quot;
+sqldf(query)</code></pre>
+<pre><code>##    nameFirst nameLast teamID yearID HR
+## 1       Babe     Ruth    BOS   1914  0
+## 2       Babe     Ruth    BOS   1915  4
+## 3       Babe     Ruth    BOS   1916  3
+## 4       Babe     Ruth    BOS   1917  2
+## 5       Babe     Ruth    BOS   1918 11
+## 6       Babe     Ruth    BOS   1919 29
+## 7       Babe     Ruth    NYA   1920 54
+## 8       Babe     Ruth    NYA   1921 59
+## 9       Babe     Ruth    NYA   1922 35
+## 10      Babe     Ruth    NYA   1923 41
+## 11      Babe     Ruth    NYA   1924 46
+## 12      Babe     Ruth    NYA   1925 25
+## 13      Babe     Ruth    NYA   1926 47
+## 14      Babe     Ruth    NYA   1927 60
+## 15      Babe     Ruth    NYA   1928 54
+## 16      Babe     Ruth    NYA   1929 46
+## 17      Babe     Ruth    NYA   1930 49
+## 18      Babe     Ruth    NYA   1931 46
+## 19      Babe     Ruth    NYA   1932 41
+## 20      Babe     Ruth    NYA   1933 34
+## 21      Babe     Ruth    NYA   1934 22
+## 22      Babe     Ruth    BSN   1935  6</code></pre>
+<p>Find all instances of players hitting more than 50 homeruns. Include first name, last name, team, year, and homeruns. Order them from greates homeruns to least.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT nameFirst, nameLast, teamID, yearID, HR
+FROM Batting INNER JOIN Master
+ON Batting.playerID=Master.playerID
+WHERE HR&gt;50
+ORDER BY HR DESC&quot;
+sqldf(query)</code></pre>
+<pre><code>##    nameFirst  nameLast teamID yearID HR
+## 1      Barry     Bonds    SFN   2001 73
+## 2       Mark   McGwire    SLN   1998 70
+## 3      Sammy      Sosa    CHN   1998 66
+## 4       Mark   McGwire    SLN   1999 65
+## 5      Sammy      Sosa    CHN   2001 64
+## 6      Sammy      Sosa    CHN   1999 63
+## 7      Roger     Maris    NYA   1961 61
+## 8       Babe      Ruth    NYA   1927 60
+## 9       Babe      Ruth    NYA   1921 59
+## 10    Jimmie      Foxx    PHA   1932 58
+## 11      Hank Greenberg    DET   1938 58
+## 12      Ryan    Howard    PHI   2006 58
+## 13      Luis  Gonzalez    ARI   2001 57
+## 14      Alex Rodriguez    TEX   2002 57
+## 15      Hack    Wilson    CHN   1930 56
+## 16       Ken   Griffey    SEA   1997 56
+## 17       Ken   Griffey    SEA   1998 56
+## 18      Babe      Ruth    NYA   1920 54
+## 19      Babe      Ruth    NYA   1928 54
+## 20     Ralph     Kiner    PIT   1949 54
+## 21    Mickey    Mantle    NYA   1961 54
+## 22     David     Ortiz    BOS   2006 54
+## 23      Alex Rodriguez    NYA   2007 54
+## 24      Jose  Bautista    TOR   2010 54
+## 25     Chris     Davis    BAL   2013 53
+## 26    Mickey    Mantle    NYA   1956 52
+## 27    Willie      Mays    SFN   1965 52
+## 28    George    Foster    CIN   1977 52
+## 29      Mark   McGwire    OAK   1996 52
+## 30      Alex Rodriguez    TEX   2001 52
+## 31       Jim     Thome    CLE   2002 52
+## 32     Ralph     Kiner    PIT   1947 51
+## 33    Johnny      Mize    NY1   1947 51
+## 34    Willie      Mays    NY1   1955 51
+## 35     Cecil   Fielder    DET   1990 51
+## 36    Andruw     Jones    ATL   2005 51</code></pre>
+<p>Babe Ruth with playerID, team name, yearID, and homeruns. For this example we must join the tables at two spots otherwise there will be repeats.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT playerID, name, Batting.yearID, Batting.HR
+FROM Batting INNER JOIN Teams
+ON Batting.teamID=Teams.teamID and Batting.yearID=Teams.yearID
+WHERE playerID='ruthba01'&quot;
+sqldf(query)</code></pre>
+<pre><code>##    playerID             name yearID HR
+## 1  ruthba01   Boston Red Sox   1914  0
+## 2  ruthba01   Boston Red Sox   1915  4
+## 3  ruthba01   Boston Red Sox   1916  3
+## 4  ruthba01   Boston Red Sox   1917  2
+## 5  ruthba01   Boston Red Sox   1918 11
+## 6  ruthba01   Boston Red Sox   1919 29
+## 7  ruthba01 New York Yankees   1920 54
+## 8  ruthba01 New York Yankees   1921 59
+## 9  ruthba01 New York Yankees   1922 35
+## 10 ruthba01 New York Yankees   1923 41
+## 11 ruthba01 New York Yankees   1924 46
+## 12 ruthba01 New York Yankees   1925 25
+## 13 ruthba01 New York Yankees   1926 47
+## 14 ruthba01 New York Yankees   1927 60
+## 15 ruthba01 New York Yankees   1928 54
+## 16 ruthba01 New York Yankees   1929 46
+## 17 ruthba01 New York Yankees   1930 49
+## 18 ruthba01 New York Yankees   1931 46
+## 19 ruthba01 New York Yankees   1932 41
+## 20 ruthba01 New York Yankees   1933 34
+## 21 ruthba01 New York Yankees   1934 22
+## 22 ruthba01    Boston Braves   1935  6</code></pre>
+<p>Babe Ruth: first and last name, team name, yearID, and homeruns.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT nameFirst, nameLast, name, Batting.yearID, Batting.HR 
+FROM (Batting INNER JOIN Master
+ON Batting.playerID=Master.playerID) INNER JOIN Teams
+ON Batting.teamID=Teams.teamID AND Batting.yearID=Teams.yearID
+WHERE Batting.playerID='ruthba01'&quot;
+sqldf(query)</code></pre>
+<pre><code>##    nameFirst nameLast             name yearID HR
+## 1       Babe     Ruth   Boston Red Sox   1914  0
+## 2       Babe     Ruth   Boston Red Sox   1915  4
+## 3       Babe     Ruth   Boston Red Sox   1916  3
+## 4       Babe     Ruth   Boston Red Sox   1917  2
+## 5       Babe     Ruth   Boston Red Sox   1918 11
+## 6       Babe     Ruth   Boston Red Sox   1919 29
+## 7       Babe     Ruth New York Yankees   1920 54
+## 8       Babe     Ruth New York Yankees   1921 59
+## 9       Babe     Ruth New York Yankees   1922 35
+## 10      Babe     Ruth New York Yankees   1923 41
+## 11      Babe     Ruth New York Yankees   1924 46
+## 12      Babe     Ruth New York Yankees   1925 25
+## 13      Babe     Ruth New York Yankees   1926 47
+## 14      Babe     Ruth New York Yankees   1927 60
+## 15      Babe     Ruth New York Yankees   1928 54
+## 16      Babe     Ruth New York Yankees   1929 46
+## 17      Babe     Ruth New York Yankees   1930 49
+## 18      Babe     Ruth New York Yankees   1931 46
+## 19      Babe     Ruth New York Yankees   1932 41
+## 20      Babe     Ruth New York Yankees   1933 34
+## 21      Babe     Ruth New York Yankees   1934 22
+## 22      Babe     Ruth    Boston Braves   1935  6</code></pre>
+<p>Lets get the career homerun totals for players. Limit the display to just those that hit at least 600 homeruns. Highest homerun total at the top. Include first and last names.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT nameFirst, nameLast, sum(HR)
+FROM Batting INNER JOIN Master
+ON Batting.playerID=Master.playerID
+GROUP BY Batting.playerID
+HAVING sum(HR)&gt;=600
+ORDER BY sum(HR) DESC&quot;
+sqldf(query)</code></pre>
+<pre><code>##   nameFirst  nameLast sum(HR)
+## 1     Barry     Bonds     762
+## 2      Hank     Aaron     755
+## 3      Babe      Ruth     714
+## 4      Alex Rodriguez     696
+## 5    Willie      Mays     660
+## 6       Ken   Griffey     630
+## 7       Jim     Thome     612
+## 8     Sammy      Sosa     609</code></pre>
+<p>List all players with the first name Bob who averaged more than one million dollars in salary over their career. Include the last name.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT nameFirst, nameLast, avg(salary)
+From (Batting INNER JOIN Master
+ON Batting.playerID=Master.playerID) INNER JOIN Salaries
+ON Batting.playerID=Salaries.playerID
+GROUP BY Batting.playerID
+HAVING nameFirst='Bob' and avg(salary)&gt;1000000&quot;
+sqldf(query)</code></pre>
+<pre><code>##   nameFirst  nameLast avg(salary)
+## 1       Bob     Boone     1047580
+## 2       Bob    Horner     1416667
+## 3       Bob     Howry     1804583
+## 4       Bob     Ojeda     1035926
+## 5       Bob   Stanley     1067500
+## 6       Bob Tewksbury     1288182
+## 7       Bob     Welch     1930417
+## 8       Bob   Wickman     2635813</code></pre>
 </div>
 
 
